--- a/miniprogram/pkg_rr/pages/chat/chat.wxss
+++ b/miniprogram/pkg_rr/pages/chat/chat.wxss
@@ -59,10 +59,9 @@ page {
   margin-bottom: 240rpx;
   padding: 10rpx;
   font-size: 14px;
-  line-height: 40px;
-  word-break: break-all;
   display: flex;
   flex-direction: column;
+  padding-bottom: 40rpx;
 }
 
 .empty-message {
