--- a/miniprogram/pkg_rr/pages/openai-image/index.wxss
+++ b/miniprogram/pkg_rr/pages/openai-image/index.wxss
@@ -63,6 +63,7 @@ page {
   word-break: break-all;
   display: flex;
   flex-direction: column;
+  padding-bottom: 40rpx;
 }
 
 .empty-message {
@@ -90,6 +91,7 @@ page {
   text-align: left;
   border-radius: 10rpx;
   min-width: 76%;
+  width: 100%;
   line-height: 48rpx;
   padding: 10rpx;
 }
@@ -99,6 +101,7 @@ page {
   text-align: left;
   border-radius: 10rpx;
   min-width: 76%;
+  width: 100%;
   line-height: 48rpx;
   padding: 10rpx;
 }
