--- a/miniprogram/components/empty/index.wxml
+++ b/miniprogram/components/empty/index.wxml
@@ -1,11 +1,6 @@
-<view class="page">
-  <view class="pannel">
-    <view class="title">空列表组件</view>
-    <view class="content">
-      当请求数据接口返回列表为空时显示的内容,该组件可设置背景图及提示文字
-    </view>
-    <view class="pannel-inner">
-      <empty slot="empty" img-class="empty-img" text-class="empty-text" emptyText="{{emptySetting.text}}" emptyImg="{{emptySetting.img}}" />
-    </view>
+<view class="coolui-scroller-empty">
+  <view class="coolui-scroller-empty-inner">
+    <image src="{{emptyImg}}" mode="aspectFill" wx:if="{{emptyImg}}" class="empty-img img-class"></image>
+    <view class="empty-text text-class">{{emptyText}}</view>
   </view>
 </view>
