--- a/miniprogram/components/empty/index.wxss
+++ b/miniprogram/components/empty/index.wxss
@@ -1,18 +1,25 @@
-.page {
-  height          : 100vh;
-  background-color: #f2f2f2;
-  padding         : 0 30rpx;
-  overflow        : hidden;
-  display         : flex;
+/* components/coolui-scroller-item/coolui-scroller-item.wxss */
+:host {
+  display: block;
+  height: 100%;
+}
+.coolui-scroller-empty {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.pannel {
-  flex          : 1;
-  margin-bottom : 30rpx;
-  display       : flex;
-  flex-direction: column;
+.empty-img{
+  width: 30vw;
+  height: 30vw;
+  display: block;
+  margin: 0 auto;
 }
 
-.pannel-inner {
-  flex: 1;
+.empty-text{
+  text-align: center;
+  font-size: 28rpx;
+  color: #999;
+  margin: 50rpx auto;
 }
