--- a/miniprogram/components/tab-bar/tab-bar.wxml
+++ b/miniprogram/components/tab-bar/tab-bar.wxml
@@ -1,13 +1,66 @@
 <view class="tabBar">
+  <view wx:if="{{aiSelectShow}}" class="bottom-dialog-bg"></view>
   <view class="cu-bar tabbar bg-white shadow">
-    <view class="action {{idx==0?'text-current':'text-normal'}}" catchtap='goToTab' data-url="../../../pkg_prompts/pages/prompts/prompts" data-index="0">
-      <botton class='iconf icon-discover'></botton>趣问
-    </view>
-    <view class="action add-action {{idx==1?'text-current':'text-normal'}}" catchtap='goToTab' data-url="../../../pkg_rr/pages/rr/rr" data-index="1">
-      <botton class='iconf cu-btn icon-skinfill bg-rr shadow'></botton>软软
-    </view>
-    <view class="action {{idx==2?'text-current':'text-normal'}}" catchtap='goToTab' data-url="../../../pkg_mine/pages/mine/mine" data-index="2">
-      <botton class='iconf icon-my'></botton>我的
-    </view>
+    <!-- 趣问菜单 -->
+    <block wx:if="{{idx == 0}}">
+      <view class="action  text-current ">
+        <botton class='iconf icon-discover'></botton>
+        趣问
+      </view>
+    </block>
+    <block wx:else="{{idx == 1}}">
+      <!-- 不是当前 -->
+      <view class="action text-normal" catchtap='goToTab' data-url="../../../pkg_prompts/pages/prompts/prompts" data-index="0">
+        <botton class='iconf icon-discover'></botton>
+        趣问
+      </view>
+    </block>
+    <!-- 软软菜单 -->
+    <block wx:if="{{idx == 1}}">
+      <view class="action add-action text-current" catchtap='showAISelect'>
+        <botton class='iconf cu-btn icon-skinfill bg-rr shadow'></botton>
+        软软
+      </view>
+    </block>
+    <block wx:else="{{idx == 1}}">
+      <!-- 不是当前 -->
+      <view class="action add-action text-normal" catchtap='goToTab' data-url="../../../pkg_rr/pages/rr/rr" data-index="1">
+        <botton class='iconf cu-btn icon-skinfill bg-rr shadow'></botton>
+        软软
+      </view>
+    </block>
+    <!-- 我的菜单 -->
+    <block wx:if="{{idx == 2}}">
+      <view class="action  text-current ">
+        <botton class='iconf icon-my'></botton>
+        我的
+      </view>
+    </block>
+    <block wx:else="{{idx == 2}}">
+      <view class="action text-normal" catchtap='goToTab' data-url="../../../pkg_mine/pages/mine/mine" data-index="2">
+        <botton class='iconf icon-my'></botton>
+        我的
+      </view>
+    </block>
+  </view>
+</view>
+<view wx:if="{{aiSelectShow}}" class="bottom-dialog">
+  <view class="bottom-dialog-body">
+    <scroll-view scroll-x="true" style="width: 100%;">
+      <view class="brain-list">
+        <view bindtap="onAIItemTap" class="brain-item {{aiType === 'ChatGPT_Text'? 'selected' :''}}" data-aitype="ChatGPT_Text">
+          <image class="brain-item-icon" src="../../images/logo.png"></image>
+          <view class="brain-item-title">文本生成</view>
+        </view>
+        <view bindtap="onAIItemTap" class="brain-item  {{aiType === 'ChatGPT_Image'? 'selected' :''}}" data-aitype="ChatGPT_Image">
+          <image class="brain-item-icon" src="../../images/hj.png"></image>
+          <view class="brain-item-title">图片生成</view>
+        </view>
+        <view bindtap="onAIItemTap" class="brain-item  {{aiType === 'ChatGPT_Edit_Image'? 'selected' :''}}" data-aitype="ChatGPT_Edit_Image">
+          <image class="brain-item-icon" src="../../images/hj.png"></image>
+          <view class="brain-item-title">图片编辑</view>
+        </view>
+      </view>
+    </scroll-view>
   </view>
 </view>
