--- a/miniprogram/pkg_rr/components/message-chatgpt-image/message-chatgpt-image.wxml
+++ b/miniprogram/pkg_rr/components/message-chatgpt-image/message-chatgpt-image.wxml
@@ -7,6 +7,6 @@
     <block wx:else="{{errors[index] === true}}">
       <view class="images-list-item-tip">可以点击并长按保存图片，图片会过期</view>
     </block>
-    <image class="images-list-item {{errors[index] === true ?'error':''}}" src="{{item.url}}" bindtap="onImageItemTap" data-index="{{index}}" data-url="{{item.url}}" binderror="onError"></image>
+    <image mode="widthFix"  class="images-list-item {{errors[index] === true ?'error':''}}" src="{{item}}" bindtap="onImageItemTap" data-index="{{index}}" data-url="{{item}}" binderror="onError"></image>
   </block>
 </view>
