--- a/miniprogram/pkg_prompts/pages/prompt-detail/index.wxss
+++ b/miniprogram/pkg_prompts/pages/prompt-detail/index.wxss
@@ -110,6 +110,10 @@ page {
   font-size: 20rpx;
 }
 
+.interaction-button.active {
+  color: #499CFB;
+}
+
 .action-button {
   width: 90rpx;
   height: 90rpx;
