--- a/miniprogram/pkg_rr/pages/chat/chat.wxml
+++ b/miniprogram/pkg_rr/pages/chat/chat.wxml
@@ -25,7 +25,7 @@
             </view>
           </view>
           <view class="news-avatar">
-            <image class='avatar' src="../../../images/logo.png"></image>
+            <image class='avatar' src="{{avatarUrl}}"></image>
           </view>
         </view>
         <!-- AI  -->
