--- a/miniprogram/pkg_rr/pages/openai-image/index.wxml
+++ b/miniprogram/pkg_rr/pages/openai-image/index.wxml
@@ -26,7 +26,7 @@
             </view>
           </view>
           <view class="news-avatar">
-            <image class='avatar' src="../../../images/hj.png"></image>
+            <image class='avatar' src="{{avatarUrl}}"></image>
           </view>
         </view>
         <!-- AI  -->
