--- a/miniprogram/pkg_mine/components/my-publish/index.wxml
+++ b/miniprogram/pkg_mine/components/my-publish/index.wxml
@@ -1,2 +1,9 @@
 <!--pkg_mine/components/my-publish/index.wxml-->
-<text>pkg_mine/components/my-publish/index.wxml</text>
+<view class="container">
+  <scroll-view enable-flex scroll-y="true" class="my-prompts-container">
+    <block wx:for="{{prompts}}" wx:for-item="item" wx:key="item" wx:for-index="itemIndex">
+      <view>{{item.prompt}}</view>
+      <view>{{item.create_time_str}}</view>
+    </block>
+  </scroll-view>
+</view>
