--- a/miniprogram/pkg_mine/components/reward-point/index.wxss
+++ b/miniprogram/pkg_mine/components/reward-point/index.wxss
@@ -4,23 +4,59 @@
   flex-direction: column;
 }
 
-.reward-summary {
-  background-color: #FFFFFF;
-  width: 96vw;
-  border-radius: 12rpx;
-  padding: 20rpx 20rpx;
+.container {
+  width: 100%;
+  height: 100%;
 }
 
-.reward-points {
-  width: 120rpx;
-  height: 120rpx;
-  line-height: 120rpx;
-  text-align: center;
-  background-color: #A7E9BB;
-  color: #FFFFFF;
+.reward-logs-header {
+  width: 100%;
+  height: 90rpx;
+  line-height: 90rpx;
+  border-bottom: 2rpx solid #777777;
+  display: flex;
+  justify-content: space-between;
 }
 
 .reward-logs-container {
   display: flex;
+  flex-direction: column;
   flex: 1;
+  overflow: hidden;
+}
+
+.list-item {
+  width: 100%;
+  height: 90rpx;
+  display: flex;
+  background-color: #FFFFFF;
+  align-items: center;
+  padding: 0 10rpx;
+  border-bottom: 2rpx solid #DEDEDE;
+}
+
+.list-item .amount {
+  width: 50rpx;
+  height: 50rpx;
+  line-height: 50rpx;
+  font-size: 34rpx;
+  text-align: center;
+  background-color: #95EC69;
+  color: #FFFFFF;
+  border-radius: 50%;
+}
+
+.list-item .reason {
+  color: #444444;
+  flex: 1;
+  padding: 0 10rpx;
+}
+
+.list-item .time {
+  color: #777777;
+  font-size: 24rpx;
+}
+
+.list-item.isreward .amount {
+  background-color: #ff4d4f;
 }
