--- a/miniprogram/pkg_mine/pages/mine/mine.wxss
+++ b/miniprogram/pkg_mine/pages/mine/mine.wxss
@@ -7,6 +7,12 @@
   font-style: normal;
 }
 
+.icon {
+  font-size: 20rpx;
+  width: 80rpx;
+  height: 80rpx;
+}
+
 page {
   background-color: #F5F5F5;
   width: 100vw;
@@ -19,8 +25,7 @@ page {
   width: 100vw;
   height: 100vh;
   position: relative;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,6 +36,18 @@ page {
   height: 300rpx;
   background-color: #FFFFFF;
   border-bottom: 2px solid #EBEBEB;
+}
+
+.header {
+  width: 100%;
+}
+
+.content {
+  width: 100%;
+  flex: 1;
+  display: flex;
+  overflow: hidden;
+  flex-direction: column;
 }
 
 .user-card {
@@ -97,4 +114,70 @@ page {
   padding: 0;
   text-align: left;
   background-color: #FFFFFF;
+}
+
+.reward-summary {
+  background-color: #FFFFFF;
+  width: 96vw;
+  border-radius: 12rpx;
+  padding: 20rpx 20rpx;
+  display: flex;
+  justify-content: space-between;
+}
+
+.reward-logs {
+  width: 100%;
+  display: flex;
+  flex: 1;
+  overflow: hidden;
+}
+
+.title {
+  line-height: 60rpx;
+  color: #444444;
+}
+
+.reward-points {
+  width: 160rpx;
+  height: 160rpx;
+  text-align: center;
+  font-size: 32rpx;
+  background-color: #95EC69;
+  color: #FFFFFF;
+}
+
+.reward-points .number {
+  width: 160rpx;
+  height: 112rpx;
+  line-height: 112rpx;
+  font-size: 36rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.reward-points-increased {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: space-between;
+  align-items: center;
+  color: #444444;
+  line-height: 50rpx;
+}
+
+.reward-points-ad {
+  width: 160rpx;
+  height: 160rpx;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: #ff4d4f;
+  color: #FFFFFF;
+  align-items: center;
+}
+
+
+.icon-playfill:before {
+  content: "\e74f";
 }
