--- a/miniprogram/pkg_prompts/pages/prompts/prompts.wxml
+++ b/miniprogram/pkg_prompts/pages/prompts/prompts.wxml
@@ -25,7 +25,7 @@
       </item>
       <!-- item组件循环项 -->
     </scroller-page>
-    <ad unit-id="adunit-9c64e457097d841f"></ad>
+    <!-- <ad unit-id="adunit-9c64e457097d841f"></ad> -->
     <!-- page组件循环页 -->
     <!-- 列表 -->
     <!-- 加载更多组件 -->
