--- a/miniprogram/pkg_mine/pages/mine/mine.wxss
+++ b/miniprogram/pkg_mine/pages/mine/mine.wxss
@@ -48,6 +48,7 @@ page {
   display: flex;
   overflow: hidden;
   flex-direction: column;
+  align-items: center;
 }
 
 .user-card {
@@ -150,10 +151,13 @@ page {
   width: 160rpx;
   height: 112rpx;
   line-height: 112rpx;
-  font-size: 36rpx;
+  font-size: 42rpx;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.reward-points .text {
+  font-size:26rpx;
 }
 
 .reward-points-increased {
@@ -167,6 +171,7 @@ page {
 }
 
 .reward-points-ad {
+  padding: 0 20rpx;
   width: 160rpx;
   height: 160rpx;
   display: flex;
@@ -175,6 +180,15 @@ page {
   background-color: #ff4d4f;
   color: #FFFFFF;
   align-items: center;
+}
+
+.reward-points-ad image{
+  width:100rpx;
+  height:112rpx;
+}
+
+.reward-points-ad view{
+  font-size:26rpx;
 }
 
 
